# Deepfake-Detection

./: .gitignore  Untitled.ipynb  deepfake-detection-inference.ipynb  deepfake-detection-model.ipynb  deepfake_dataset.py  prediction_results.csv  pyproject.toml  worker.py
.ipynb_checkpoints/: deepfake-detection-inference-checkpoint.ipynb  deepfake-detection-model (17)-checkpoint.ipynb  deepfake-detection-model (18)-checkpoint.ipynb  deepfake-detection-model-checkpoint.ipynb  deepfake_dataset-checkpoint.py  main-checkpoint.py  pyproject-checkpoint.toml
dataset/: celeb_df_metadata.csv  dataset-analysis.ipynb
models/: best_deepfake_detector_model.pth  deepfake_detector_model-0.0.1.pth  deepfake_detector_model-0.0.2.pth  deepfake_detector_model.pth
