[project]
name = "Deepfake-Detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "jupyter>=1.1.1",
    "jupyterlab-code-formatter>=3.0.2",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pandoc>=2.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
